[gd_scene load_steps=29 format=3 uid="uid://q8qsvw6m20hq"]

[ext_resource type="Script" path="res://script/Enemy/Slime.gd" id="1_o6bx8"]
[ext_resource type="Texture2D" uid="uid://0oh6gbqx2rvf" path="res://art/Enemies/Slime/slimeRight.png" id="2_fx2sp"]
[ext_resource type="Shader" path="res://art/Shader/Blink.gdshader" id="2_gtw5m"]
[ext_resource type="AudioStream" uid="uid://cn6g0p3bua2xg" path="res://art/Music and Sounds/Slime/slimeJump1.mp3" id="3_d0stm"]
[ext_resource type="PackedScene" uid="uid://kje7vcoucwfe" path="res://scenes/Box/hurt_box.tscn" id="3_mh01n"]
[ext_resource type="AudioStream" uid="uid://cuedpebgryg3q" path="res://art/Music and Sounds/Slime/slimeJump2.mp3" id="4_jutgj"]
[ext_resource type="PackedScene" uid="uid://0cgjopmw7jb4" path="res://scenes/Box/hit_box.tscn" id="5_bp328"]
[ext_resource type="Texture2D" uid="uid://b84fkwg61jg4g" path="res://art/Shadows/MediumShadow.png" id="6_4d2gl"]
[ext_resource type="AudioStream" uid="uid://d3nvt8x00yf8q" path="res://art/Music and Sounds/slimeSound.mp3" id="6_rm7o8"]
[ext_resource type="Texture2D" uid="uid://c4pfohrmn4j1j" path="res://art/Effects/Particle/particle.png" id="10_aebvr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wb4xh"]
shader = ExtResource("2_gtw5m")
shader_parameter/active = false

[sub_resource type="Animation" id="Animation_7am53"]
resource_name = "Jump"
length = 1.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlimeJump")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.370761,
"start_offset": 0.544395,
"stream": ExtResource("3_d0stm")
}, {
"end_offset": 0.467792,
"start_offset": 0.552566,
"stream": ExtResource("4_jutgj")
}],
"times": PackedFloat32Array(0.4, 1.5)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_j8qqt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_koosp"]
_data = {
"Jump": SubResource("Animation_7am53"),
"RESET": SubResource("Animation_j8qqt")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_2epm6"]
radius = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rj6wb"]
radius = 3.90885
height = 10.6212

[sub_resource type="CircleShape2D" id="CircleShape2D_n33jq"]
radius = 100.045

[sub_resource type="CircleShape2D" id="CircleShape2D_poi37"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ls38q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rb3pp"]
bg_color = Color(0.329412, 0.678431, 0.552941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xo7yb"]
bg_color = Color(0.2, 0.2, 0.2, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_40oh8"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_lrtxa"]
resource_name = "Blink"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [false, true, false, true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tgrlv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vd6tw"]
_data = {
"Blink": SubResource("Animation_lrtxa"),
"RESET": SubResource("Animation_tgrlv")
}

[sub_resource type="Curve" id="Curve_nmj27"]
_data = [Vector2(0, 0.35061), 0.0, 0.0, 0, 0, Vector2(0.14, 0.992886), 0.0, 0.0, 0, 0, Vector2(1, 0.221545), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="12"]
curve = SubResource("Curve_nmj27")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7r7qj"]
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.3
scale_curve = SubResource("12")

[node name="Slime" type="CharacterBody2D"]
process_mode = 1
collision_layer = 514
collision_mask = 513
script = ExtResource("1_o6bx8")

[node name="PathFinding" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="PathFinding"]
debug_path_custom_color = Color(0, 0.615262, 0.615703, 1)

[node name="PathTimer" type="Timer" parent="PathFinding"]
wait_time = 0.3
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_wb4xh")
use_parent_material = true
texture = ExtResource("2_fx2sp")
hframes = 17
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_koosp")
}
autoplay = "Jump"

[node name="HurtBox" parent="." instance=ExtResource("3_mh01n")]
visible = false
collision_layer = 1024
collision_mask = 16

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_2epm6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
rotation = -1.55729
shape = SubResource("CapsuleShape2D_rj6wb")

[node name="MediumShadow" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(0, 12)
texture = ExtResource("6_4d2gl")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 8388608
collision_mask = 8388608

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_n33jq")
debug_color = Color(0.756863, 0.380392, 0.643137, 0.419608)

[node name="HitBox" parent="." instance=ExtResource("5_bp328")]
visible = false
collision_layer = 8
collision_mask = 8
damage = 5

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_poi37")

[node name="HPBar" type="ProgressBar" parent="."]
z_index = 10
z_as_relative = false
offset_left = -12.0
offset_top = -13.0
offset_right = 13.0
offset_bottom = -9.0
size_flags_vertical = 8
theme_override_styles/background = SubResource("StyleBoxEmpty_ls38q")
theme_override_styles/fill = SubResource("StyleBoxFlat_rb3pp")
value = 60.0
show_percentage = false
metadata/_edit_group_ = true

[node name="DamageBar" type="ProgressBar" parent="HPBar"]
z_index = 8
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_xo7yb")
theme_override_styles/fill = SubResource("StyleBoxFlat_40oh8")
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="HPBar"]
wait_time = 0.4
one_shot = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_rm7o8")

[node name="SlimeJump" type="AudioStreamPlayer2D" parent="."]
pitch_scale = 2.0
max_distance = 100.0

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vd6tw")
}

[node name="DMOrigin" type="Node2D" parent="."]

[node name="HitParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, 5)
emitting = false
amount = 6
sub_emitter = NodePath(".")
process_material = SubResource("ParticleProcessMaterial_7r7qj")
texture = ExtResource("10_aebvr")
lifetime = 0.3
one_shot = true
preprocess = 0.03
explosiveness = 0.8
randomness = 0.59
local_coords = true

[connection signal="timeout" from="PathFinding/PathTimer" to="." method="_on_path_timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_hurt_box_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="HPBar/Timer" to="." method="_on_timer_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
